--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Salary Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="jquery.js"></script>
     <script src="client.js"></script>
@@ -38,10 +38,10 @@
                 <td>ID</td>
                 <td>Title</td>
                 <td>Annual Salary</td>
+                <td><button>Delete</button></td>
             </tr>
         </tbody>
-
     </table>
-    
+    <div class="totalMonthly">Total Monthly: </div>
 </body>
 </html>
