adjusting table, styling css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <th>ID</th>
                 <th>Title</th>
                 <th>Annual Salary</th>
+                <th><!-- space aboce del button --></th>
             </tr>
         </thead>
         <tbody id="employeeTable">
@@ -41,6 +42,11 @@
                 <td><button>Delete</button></td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td class="footerRow"> </td>
+            </tr>
+        </tfoot>
     </table>
     <div class="totalMonthly">Total Monthly: </div>
 </body>
