input vars, appended dom, global monthly cost var & logic

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="bottomRow">
             <ul> </ul>
         </div>
-        <div class="totalMonthly">Total Monthly: </div>
+        <div class="totalMonthly">Total Monthly: <span id="totalMonthly">0</span></div>
     </div>
 </body>
 </html>
