working through logic of cost color

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <td>ID</td>
                 <td>Title</td>
                 <td>Annual Salary</td>
-                <td><button id="delete-button">Delete</button></td>
+                <td><button class="delete-button">Delete</button></td>
             </tr>
         </tbody>
     </table>
@@ -55,7 +55,9 @@
         <div class="bottomRow">
             <ul> </ul>
         </div>
-        <div class="totalMonthly">Total Monthly: <span id="totalMonthly">0</span></div>
+        <div id="totalMonthlyBox">
+            <div class="totalMonthly">Total Monthly: <span id="totalMonthly">0</span></div>
+        </div>
     </div>
 </body>
 </html>
