delete button registering in template, but not spun up html/jquery

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </tr>
         </thead>
         <tbody id="employeeTable">
-<!-- the table below is only a place holder, delete when done -->
+<!-- the table below is only a place holder, clear in code when done -->
             <tr>
                 <td>First Name</td>
                 <td>Last Name</td>
