--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Add Employee</h2>
     <div id="addEmployeeField">
         <div>
-            <div class="input boxes">
+            <div class="inputBoxes">
                 <input type="text" id="firstName" placeholder="First Name" />
                 <input type="text" id="lastName" placeholder="Last Name" />
                 <input type="text" id="id" placeholder="ID" />
