salary warning color working

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="bottomRow">
             <ul> </ul>
         </div>
+        <div class
         <div id="totalMonthlyBox">
             <div class="totalMonthly">Total Monthly: <span id="totalMonthly">0</span></div>
         </div>
